# splunk-app-leads

./: README.md  SECURITY.md  pyproject.toml  splunk_app_leads.py
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml
tests/: test_nothing.py
