[project]
name = "splunk-app-leads"
version = "0.1.0"
description = "Grab the leads for your app from SplunkBase"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.8", "requests>=2.32.3"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "types-requests>=2.32.0.20250328",
]
